<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunter_se_description</name>
  <version>0.0.0</version>
  <description>Agilex Hunter SE description package </description>
  <maintainer email="jacopo.cioni@ing.unipi.it">Jacopo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="/install/hunter_se_description/share/hunter_se_description/../"/>
  </export>
</package>

